[project]
name = "pcst_fast"
dynamic = ["version"]
description = "A fast implementation of the Goemans-Williamson scheme for the prize-collecting Steiner tree / forest problem."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ludwigschmidt"},
    {name = "alexlenail"},
]
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/fraenkel-lab/pcst_fast"
