[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10"
]
build-backend = "setuptools.build_meta"

[project]
name = "pcst_fast"
dynamic = ["version"]
description = "A fast implementation of the Goemans-Williamson scheme for the prize-collecting Steiner tree / forest problem."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ludwigschmidt"},
    {name = "alexlenail"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.urls]
homepage = "https://github.com/fraenkel-lab/pcst_fast"
